# json-array-splitter

./: .gitignore  CMakeLists.txt  README.md
examples/: good.json
include/: main.h
include/util/: util.h
scripts/: post_process.sh  remove_carriage_return.sh
src/: main.cpp
